# claudit

./: .gitignore  APP_STORE_FIXES.md  APP_STORE_SUBMISSION.md  CERTIFICATE_GUIDE.md  CHANGELOG.md  CLAUDE.md  LICENSE  NEXT_STEPS.md  README.md  package.json
.claude/agents/: tauri-expert.md
.claude/commands/: release.md
.claude/commands/tauri/: check.md
.github/: FUNDING.yml
.github/workflows/: release.yml
.serena/: project.yml
landing/: Dockerfile  changelog.html  download.html  index.html  nginx.conf  privacy.html
scripts/: build-appstore.sh  build-direct.sh  generate-icons.ts  local-release.sh  notarize.sh
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs  types.rs
src-tauri/src/services/: analytics.rs  config.rs  environment.rs  hooks.rs  mod.rs  pricing.rs  sessions.rs  settings.rs  usage.rs
