[package]
name = "claudit"
version = "0.5.0"
description = "Claude Code usage monitor with analytics dashboard"
authors = ["flipace <neschkudla@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "claudit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
open = "5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
notify = "7"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
